Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "name.title # 'Art Vandelay'"
+    "name = 'art vanname.title # 'Art Vandelay'"
    ]
   },
   {
