--- a/index.ipynb
+++ b/index.ipynb
@@ -164,7 +164,8 @@
     }
    ],
    "source": [
-    "name = 'art vanname.title # 'Art Vandelay'"
+    "name = 'art vandelay\"\n",
+    "name.title # 'Art Vandelay'"
    ]
   },
   {
