--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "website = 'vandelay.com' # 'www.vandelay.com'"
+    "website = \"www.\" + 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
