--- a/index.ipynb
+++ b/index.ipynb
@@ -231,14 +231,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "website = \"www.\" + 'vandelay.com' # 'www.vandelay.com'"
+    "website = \"www.\" + 'vandelay.com' # 'www.vandelay.com'\n",
+    "pri"
    ]
   },
   {
