--- a/index.ipynb
+++ b/index.ipynb
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "website = \"www.\" + 'vandelay.com' # 'www.vandelay.com'\n",
-    "pri"
+    "print(website)"
    ]
   },
   {
