Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,11 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.vandelay.com\n"
+     ]
+    }
+   ],
    "source": [
     "website = \"www.\" + 'vandelay.com' # 'www.vandelay.com'\n",
     "print(website)"
