--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,7 @@
    },
    "outputs": [],
    "source": [
-    "area_code = \"7285553334\" # 728"
+    "area_code = \"7285553334\"[] # 728"
    ]
   },
   {
