--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,8 @@
    },
    "outputs": [],
    "source": [
-    "area_code = \"7285553334\"[:4] # 728"
+    "area_code = \"7285553334\"[:4] # 728\n",
+    "print(area_code)"
    ]
   },
   {
