--- a/index.ipynb
+++ b/index.ipynb
@@ -265,13 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7285\n"
+     ]
+    }
+   ],
    "source": [
-    "area_code = \"7285553334\"[:4] # 728\n",
+    "area_code = \"7285553334\"[:] # 728\n",
     "print(area_code)"
    ]
   },
